fixed dropdown arrow overlapping text

--- a/_src-lp/blocks/features/features.scss
+++ b/_src-lp/blocks/features/features.scss
@@ -41,6 +41,7 @@
   position: relative;
   cursor: pointer;
   margin-bottom: 5px;
+  width: 95%;
 }
 
 .features-container .features .feature-list .accordion::after {
@@ -48,6 +49,7 @@
   font-weight: bold;
   position: absolute;
   top: 0;
+  right: -15px;
   margin-left: 8px;
   transition: transform 0.4s;
   transform: rotate(90deg);
